--- a/styls.css
+++ b/styls.css
@@ -1,3 +1,12 @@
+html, body{
+    width: 100%;
+    height: 100%;
+    
+}
+
+
+
+
 .menu_hamburguera{
     position: relative;
 }
@@ -21,7 +30,7 @@
     margin-left: 25px;
 }
 .menu{
-    position: relative;
+    
     position: absolute;
     display: none;
     top: 75.5px;
@@ -29,7 +38,7 @@
     right: 0%;
     background-color: rgba(111, 108, 107, 1);
     height: 833px;
-    width: 335px;
+    width: 100%;
     background-color: #3c3b3a;
 }
 
@@ -72,7 +81,6 @@ h1{
 }
 
 .conteiner{
-    border: 1% solid #3c3b3a;
     width: 100%;
     height: 65px;
     background-color: #3c3b3a;
@@ -1176,7 +1184,7 @@ footer .fa-medium{
     }
 
     .conteiner2{
-        width: 98.4%;
+        width: 100%;
     }
 
     .text2{
