--- a/styls.css
+++ b/styls.css
@@ -703,13 +703,13 @@ h1{
     line-height: 44px;
     position: relative;  
     z-index: 10;  
+    top: -33px;
 }
 
 .conteiner_text_card_1{
-    border: 1px solid rgba(255, 255, 255, 0);
     width: 301px;
     height: 99px;
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 30px;
 }
 
